// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TaskBar /> > Snapshots > <Clock /> > should match snapshot 1`] = `
<div>
  <div
    class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
    style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
  >
    <div
      class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
    >
      10:00
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with active prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with icon prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    >
      <svg test-file-stub />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with small prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Frame_position__iuzg89a1 Frame_bottom__iuzg89a7 Frame_left__iuzg89a9 Frame_right__iuzg89a5 Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_padding-mobile__iuzg8989 Frame_zIndex__iuzg89e1 Frame_backgroundColor__iuzg89ad Frame_boxShadow__iuzg89cn"
    style="--height-mobile__iuzg895u: 28px; --width-mobile__iuzg895c: 100%; --position__iuzg89a0: fixed; --bottom__iuzg89a6: 0px; --left__iuzg89a8: 0px; --right__iuzg89a4: 0px; --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: space-between; --padding-mobile__iuzg8986: var(--r95-space-2); --zIndex__iuzg89e0: var(--r95-zIndex-taskbar); --backgroundColor__iuzg89ac: var(--r95-color-material); --boxShadow__iuzg89cm: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width-mobile__iuzg895f Frame_marginLeft-mobile__iuzg897r Frame_paddingLeft-mobile__iuzg899l Frame_display-mobile__iuzg893"
      style="--width-mobile__iuzg895c: 100%; --marginLeft-mobile__iuzg897o: var(--r95-space-2); --paddingLeft-mobile__iuzg899i: var(--r95-space-0); --display-mobile__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
      style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Frame_position__iuzg89a1 Frame_bottom__iuzg89a7 Frame_left__iuzg89a9 Frame_right__iuzg89a5 Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_padding-mobile__iuzg8989 Frame_zIndex__iuzg89e1 Frame_backgroundColor__iuzg89ad Frame_boxShadow__iuzg89cn"
    style="--height-mobile__iuzg895u: 28px; --width-mobile__iuzg895c: 100%; --position__iuzg89a0: fixed; --bottom__iuzg89a6: 0px; --left__iuzg89a8: 0px; --right__iuzg89a4: 0px; --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: space-between; --padding-mobile__iuzg8986: var(--r95-space-2); --zIndex__iuzg89e0: var(--r95-zIndex-taskbar); --backgroundColor__iuzg89ac: var(--r95-color-material); --boxShadow__iuzg89cm: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width-mobile__iuzg895f Frame_marginLeft-mobile__iuzg897r Frame_paddingLeft-mobile__iuzg899l Frame_display-mobile__iuzg893"
      style="--width-mobile__iuzg895c: 100%; --marginLeft-mobile__iuzg897o: var(--r95-space-2); --paddingLeft-mobile__iuzg899i: var(--r95-space-0); --display-mobile__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
      style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 2`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Frame_position__iuzg89a1 Frame_bottom__iuzg89a7 Frame_left__iuzg89a9 Frame_right__iuzg89a5 Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_padding-mobile__iuzg8989 Frame_zIndex__iuzg89e1 Frame_backgroundColor__iuzg89ad Frame_boxShadow__iuzg89cn"
    style="--height-mobile__iuzg895u: 28px; --width-mobile__iuzg895c: 100%; --position__iuzg89a0: fixed; --bottom__iuzg89a6: 0px; --left__iuzg89a8: 0px; --right__iuzg89a4: 0px; --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: space-between; --padding-mobile__iuzg8986: var(--r95-space-2); --zIndex__iuzg89e0: var(--r95-zIndex-taskbar); --backgroundColor__iuzg89ac: var(--r95-color-material); --boxShadow__iuzg89cm: var(--r95-shadow-out);"
  >
    <div
      class="Frame_position__iuzg89a1 Frame_bottom__iuzg89a7"
      style="--position__iuzg89a0: absolute; --bottom__iuzg89a6: 28px;"
    >
      <ul
        class="List_list__1lxkvz42"
      >
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Local Disk (C:)
        </li>
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width-mobile__iuzg895f Frame_marginLeft-mobile__iuzg897r Frame_paddingLeft-mobile__iuzg899l Frame_display-mobile__iuzg893"
      style="--width-mobile__iuzg895c: 100%; --marginLeft-mobile__iuzg897o: var(--r95-space-2); --paddingLeft-mobile__iuzg899i: var(--r95-space-0); --display-mobile__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
      style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with one Modal 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
    </div>
  </div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Frame_position__iuzg89a1 Frame_bottom__iuzg89a7 Frame_left__iuzg89a9 Frame_right__iuzg89a5 Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_padding-mobile__iuzg8989 Frame_zIndex__iuzg89e1 Frame_backgroundColor__iuzg89ad Frame_boxShadow__iuzg89cn"
    style="--height-mobile__iuzg895u: 28px; --width-mobile__iuzg895c: 100%; --position__iuzg89a0: fixed; --bottom__iuzg89a6: 0px; --left__iuzg89a8: 0px; --right__iuzg89a4: 0px; --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: space-between; --padding-mobile__iuzg8986: var(--r95-space-2); --zIndex__iuzg89e0: var(--r95-zIndex-taskbar); --backgroundColor__iuzg89ac: var(--r95-color-material); --boxShadow__iuzg89cm: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width-mobile__iuzg895f Frame_marginLeft-mobile__iuzg897r Frame_paddingLeft-mobile__iuzg899l Frame_display-mobile__iuzg893"
      style="--width-mobile__iuzg895c: 100%; --marginLeft-mobile__iuzg897o: var(--r95-space-2); --paddingLeft-mobile__iuzg899i: var(--r95-space-0); --display-mobile__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
      style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with two Modals 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        Windows Explorer
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
    </div>
  </div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Frame_position__iuzg89a1 Frame_bottom__iuzg89a7 Frame_left__iuzg89a9 Frame_right__iuzg89a5 Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_padding-mobile__iuzg8989 Frame_zIndex__iuzg89e1 Frame_backgroundColor__iuzg89ad Frame_boxShadow__iuzg89cn"
    style="--height-mobile__iuzg895u: 28px; --width-mobile__iuzg895c: 100%; --position__iuzg89a0: fixed; --bottom__iuzg89a6: 0px; --left__iuzg89a8: 0px; --right__iuzg89a4: 0px; --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: space-between; --padding-mobile__iuzg8986: var(--r95-space-2); --zIndex__iuzg89e0: var(--r95-zIndex-taskbar); --backgroundColor__iuzg89ac: var(--r95-color-material); --boxShadow__iuzg89cm: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width-mobile__iuzg895f Frame_marginLeft-mobile__iuzg897r Frame_paddingLeft-mobile__iuzg899l Frame_display-mobile__iuzg893"
      style="--width-mobile__iuzg895c: 100%; --marginLeft-mobile__iuzg897o: var(--r95-space-2); --paddingLeft-mobile__iuzg899i: var(--r95-space-0); --display-mobile__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft-mobile__iuzg899l Frame_paddingRight-mobile__iuzg899r Frame_paddingTop-mobile__iuzg899x Frame_paddingBottom-mobile__iuzg898x Frame_boxShadow__iuzg89cn Frame_display-mobile__iuzg893 Frame_justifyContent-mobile__iuzg8949 Frame_alignItems-mobile__iuzg894x"
      style="--paddingLeft-mobile__iuzg899i: var(--r95-space-6); --paddingRight-mobile__iuzg899o: var(--r95-space-6); --paddingTop-mobile__iuzg899u: var(--r95-space-2); --paddingBottom-mobile__iuzg898u: var(--r95-space-2); --boxShadow__iuzg89cm: var(--r95-shadow-in); --display-mobile__iuzg890: flex; --justifyContent-mobile__iuzg8946: center; --alignItems-mobile__iuzg894u: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;
